--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack serve --config ./webpack.config.js  --mode development",
+    "build": "webpack --mode production",
     "start": "node src/index.js"
   },
   "repository": {
@@ -19,7 +21,9 @@
   "homepage": "https://github.com/youngstowndigital/mikesbasementbar_site#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
@@ -28,7 +32,9 @@
     "@babel/preset-react": "^7.13.13",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
+    "dotenv-webpack": "^7.0.2",
     "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
