--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/youngstowndigital/mikesbasementbar_site#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "webpack-dotenv": "0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
