--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-scroll": "^1.8.2",
     "webpack-dotenv": "0.0.2"
   },
   "devDependencies": {
